0.13/_sources/api/generated/deepchecks.nlp.checks.model_evaluation.MetadataSegmentsPerformance.rst.txt

MetadataSegmentsPerformance
===========================



.. currentmodule:: deepchecks.nlp.checks.model_evaluation

.. autoclass:: MetadataSegmentsPerformance
   :special-members: __init__







.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   MetadataSegmentsPerformance.add_condition
   
   
   MetadataSegmentsPerformance.add_condition_segments_relative_performance_greater_than
   
   
   MetadataSegmentsPerformance.clean_conditions
   
   
   MetadataSegmentsPerformance.conditions_decision
   
   
   MetadataSegmentsPerformance.config
   
   
   MetadataSegmentsPerformance.from_config
   
   
   MetadataSegmentsPerformance.from_json
   
   
   MetadataSegmentsPerformance.metadata
   
   
   MetadataSegmentsPerformance.name
   
   
   MetadataSegmentsPerformance.params
   
   
   MetadataSegmentsPerformance.remove_condition
   
   
   MetadataSegmentsPerformance.run
   
   
   MetadataSegmentsPerformance.run_logic
   
   
   MetadataSegmentsPerformance.to_json
   


















