0.14/_sources/api/generated/deepchecks.nlp.checks.model_evaluation.MetadataSegmentsPerformance.rst.txt

MetadataSegmentsPerformance
===========================



.. currentmodule:: deepchecks.nlp.checks.model_evaluation

.. autoclass:: MetadataSegmentsPerformance
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   
   MetadataSegmentsPerformance.categorical_aggregation_threshold
   

   
   MetadataSegmentsPerformance.min_category_size_ratio
   

   
   MetadataSegmentsPerformance.n_to_show
   

   
   MetadataSegmentsPerformance.n_top_features
   

   
   MetadataSegmentsPerformance.random_state
   

   
   MetadataSegmentsPerformance.segment_minimum_size_ratio
   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   MetadataSegmentsPerformance.add_condition
   
   
   MetadataSegmentsPerformance.add_condition_segments_relative_performance_greater_than
   
   
   MetadataSegmentsPerformance.clean_conditions
   
   
   MetadataSegmentsPerformance.conditions_decision
   
   
   MetadataSegmentsPerformance.config
   
   
   MetadataSegmentsPerformance.from_config
   
   
   MetadataSegmentsPerformance.from_json
   
   
   MetadataSegmentsPerformance.metadata
   
   
   MetadataSegmentsPerformance.name
   
   
   MetadataSegmentsPerformance.params
   
   
   MetadataSegmentsPerformance.remove_condition
   
   
   MetadataSegmentsPerformance.run
   
   
   MetadataSegmentsPerformance.run_logic
   
   
   MetadataSegmentsPerformance.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /nlp/auto_checks/model_evaluation/images/thumb/sphx_glr_plot_metadata_segments_performance_thumb.png
     :alt: MetadataSegmentsPerformance

     :ref:`sphx_glr_nlp_auto_checks_model_evaluation_plot_metadata_segments_performance.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


